RESOLVED FIXED161830
URLParser: Keep track of cannot-be-a-base-url according to spec
https://bugs.webkit.org/show_bug.cgi?id=161830
Summary URLParser: Keep track of cannot-be-a-base-url according to spec
Alex Christensen
Reported 2016-09-09 18:01:58 PDT
URLParser: Keep track of cannot-be-a-base-url according to spec
Attachments
Patch (5.30 KB, patch)
2016-09-09 18:03 PDT, Alex Christensen
thorton: review+
Alex Christensen
Comment 1 2016-09-09 18:03:25 PDT
Alex Christensen
Comment 2 2016-09-09 19:08:50 PDT
Note You need to log in before you can comment on or make changes to this bug.